# euclid-mcp

./: .envrc  .gitignore  README.md  agent-prompt-crossmatch-s3.md  agent-prompt-crossmatch.md  agent-prompt.md  projects_CSST_shared-data_euclid_aws-mirrors_q1_catalogs_MER_FINAL_CATALOG_102018211_EUC_MER_FINAL-CAT_TILE102018211-CC66F6_20241018T214045.289017Z_00.00.fits
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh  setup.sh
.opencode/: DECISIONS.md  PROJECT_CONTEXT.md  RUNBOOK_SESSION_START.md  opencode.json
.opencode/agents/: release-agent.md
.opencode/skills/: release-euclid-mcp.skill.md
analysis-catalog/: .gitignore  Argocd.app.72602.yaml  Argocd.app.yaml  Argocd.app.zj.yaml  Dockerfile  Makefile  README.md  UPDATE.md  example_config.json  pyproject.toml
analysis-catalog/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
analysis-catalog/docs/: release-ops.md
analysis-catalog/manifests/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  pv-pvc.yaml  pvc.yaml  secret.yaml  service.yaml
analysis-catalog/ops/: inspect-http.sh  release.sh
analysis-catalog/overlays/env-72602/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml  pv-patch.yaml  secret-patch.yaml
analysis-catalog/overlays/env-zjlab/: deployment-patch.yaml  kustomization.yaml  secret.yaml
analysis-catalog/src/euclid_catalog_mcp/: __init__.py  fits_parser.py  server.py  tile_index.py
analysis-catalog/src/euclid_catalog_mcp/storage/: __init__.py  base.py  local.py  s3.py
analysis-catalog/tests/: __init__.py  create_sample_fits.py  test_fits_parser.py  test_tile_index.py
cross-matching/: .env.example  .gitignore  Argocd.app.yaml  Dockerfile  README.md  example_config.json  pyproject.toml
cross-matching/manifests/: configmap.yaml  deployment.yaml  ingress.yaml  pv-pvc.yaml  service.yaml
cross-matching/src/euclid_crossmatch_mcp/: __init__.py  matcher.py  server.py
cross-matching/tests/: __init__.py
mcp-inspector/: Argocd.app.yaml
(+3 files in other folders)
